complete rbm model

--- a/notebooks/data_preprocessing.ipynb
+++ b/notebooks/data_preprocessing.ipynb
@@ -623,9 +623,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df.to_csv('../data/processed/training.csv', index=False)\n",
-    "val_df.to_csv('../data/processed/validation.csv', index=False)\n",
-    "test_df.to_csv('../data/processed/testing.csv', index=False)"
+    "# train_df.to_csv('../data/processed/training.csv', index=False)\n",
+    "# val_df.to_csv('../data/processed/validation.csv', index=False)\n",
+    "# test_df.to_csv('../data/processed/testing.csv', index=False)"
    ]
   },
   {
@@ -644,57 +644,8 @@
     }
    ],
    "source": [
-    "DATA_PATH = \"../data/processed/training.csv\"\n",
-    "training = np.genfromtxt(DATA_PATH, delimiter=\",\", dtype=np.int)[1:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(13869, 3)"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "training.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trStats = lib.getUsefulStats(training)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "([3, 8, 16, 17], 4)"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "trStats[\"u_movies\"], trStats[\"n_movies\"]"
+    "# DATA_PATH = \"../data/processed/training.csv\"\n",
+    "# training = np.genfromtxt(DATA_PATH, delimiter=\",\", dtype=np.int)[1:]"
    ]
   }
  ],
